<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_home"
    android:clickable="true">

    <com.ss.ugc.android.editor.main.template.TemplateExportView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/template_export_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/export_notice_tv"
        android:textColor="@color/white"
        android:text="@string/export_notice"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="228dp" />

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/done_buttons_layout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/done_buttons_layout"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="85dp"
        tools:visibility="gone"
        android:visibility="gone">

        <Button
            android:layout_width="300dp"
            android:layout_height="57dp"
            android:id="@+id/btn_goto_my_template"
            android:text="@string/label_my_template"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_fuchsia_button_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:layout_marginTop="16dp"
            android:layout_width="300dp"
            android:layout_height="57dp"
            android:id="@+id/btn_create_template"
            android:text="@string/label_create_new_template"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_fuchsia_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="319dp"
        android:orientation="vertical"
        android:id="@+id/export_error_layout"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="gone"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/export_failed_tv"
            android:text="@string/export_failed"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/failed_notice_tv"
            android:text="@string/export_notice"
            android:textColor="@color/transparent_30p_white"
            android:textSize="14sp"
            android:layout_marginTop="11dp" />

        <Button
            android:layout_width="300dp"
            android:layout_height="57dp"
            android:id="@+id/redo_export_button"
            android:text="@string/redo_export_text"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_gradient_button"
            android:layout_marginTop="53dp" />

        <Button
            android:layout_width="300dp"
            android:layout_height="57dp"
            android:id="@+id/save_draft_button"
            android:text="@string/save_draft_text"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_template_button"
            android:layout_marginTop="16dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>