<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_home"
    android:clickable="true">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/template_config_info_back"
        android:src="@drawable/ic_template_draft_fragment_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/template_info_title_text"
        android:text="@string/template_info_title"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/keep_audio_layout"
        app:layout_constraintTop_toBottomOf="@id/template_info_title_text"
        android:layout_marginTop="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/keep_audio_title"
            android:textSize="15sp"
            android:text="@string/keep_audio_title"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/keep_audio_desc"
            android:text="@string/keep_audio_desc"
            android:textSize="12sp"
            android:textColor="@color/transparent_30p_white"
            app:layout_constraintTop_toBottomOf="@id/keep_audio_title"
            app:layout_constraintStart_toStartOf="@id/keep_audio_title"
            android:layout_marginTop="2dp"
            />

        <ImageView
            android:layout_width="54dp"
            android:layout_height="32dp"
            android:id="@+id/audio_switch"
            android:src="@drawable/ic_greenswitch_unselected"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/align_mode_layout"
        app:layout_constraintTop_toBottomOf="@id/keep_audio_layout"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/align_mode_title"
            android:textSize="15sp"
            android:text="@string/align_mode_title"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/align_mode_desc"
            android:text="@string/align_mode_desc"
            android:textSize="12sp"
            android:textColor="@color/transparent_30p_white"
            app:layout_constraintTop_toBottomOf="@id/align_mode_title"
            app:layout_constraintStart_toStartOf="@id/align_mode_title"
            android:layout_marginTop="2dp"
            />

        <ImageView
            android:layout_width="54dp"
            android:layout_height="32dp"
            android:id="@+id/alignment_switch"
            android:src="@drawable/ic_greenswitch_unselected"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>