<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_home"
    android:clickable="true"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_template_draft_fragment_back" />

        <TextView
            android:id="@+id/topBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="12dp"
            android:text="@string/draft_fragment"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnTemplateManage"
            android:layout_width="63dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_template_button"
            android:gravity="center"
            android:text="@string/manage_template_draft_text"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/templateRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingBottom="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />


    <FrameLayout
        android:id="@+id/manage_mode_delete_layout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/black_home"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/delete_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/ic_trash"
            android:drawablePadding="3dp"
            android:text="@string/delete_draft_title_shortened"
            android:textColor="@color/transparent_50p_white"
            android:textSize="10sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/more_options_full_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <View
            android:id="@+id/more_options_color_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="200dp"
            android:background="@color/transparent_60p" />

        <LinearLayout
            android:id="@+id/draft_more_options_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="bottom"
            android:background="@color/black_home"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
  >

            <TextView
                android:id="@+id/menu_rename_tv"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableStart="@drawable/ic_template_modify"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:text="@string/rename_draft_title"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/menu_duplicate_tv"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackground"
                android:drawableStart="@drawable/ic_template_copy"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:text="@string/copy_draft_title"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/menu_delete_tv"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackground"
                android:drawableStart="@drawable/ic_trash"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:text="@string/delete_draft_title"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>