<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:clipChildren="false"
    android:background="@color/black_home"
    android:id="@+id/export_fragment"
    android:clickable="true">

    <TextView
        android:id="@+id/notice_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_exporting"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/notice_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compile_warning"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notice_text"
        app:layout_constraintVertical_bias="0.00"
        android:layout_marginTop="10dp"/>

    <com.ss.ugc.android.editor.main.template.TemplateExportView
        android:id="@+id/export_template_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:outlineColor="@color/colorAccent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/export_success_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="460dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:id="@+id/share_button_layout"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/done_button_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_button"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/share_button"
                android:clickable="false"
                android:text="@string/share_video"
                android:textColor="@color/transparent_60p_white"
                android:paddingTop="60dp"
                android:background="@color/transparent"
                />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/share_icon"
                android:src="@drawable/ic_color_share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/done_button_layout"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/share_button_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_button"
            android:clickable="true"
            >

            <Button
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:id="@+id/done_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/transparent"
                android:text="@string/done_compiling"
                android:textColor="@color/transparent_60p_white"
                android:paddingTop="60dp"
                android:clickable="false"
                />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/done_icon"
                android:src="@drawable/ic_checked_done"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>